--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-motion": "^0.5.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-text-collapse": "^0.6.1",
     "styled-components": "^5.3.0"
   },
   "scripts": {
