--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.9.0",
     "react-text-collapse": "^0.6.1",
     "styled-components": "^5.3.0"
   },
